--- a/index.html
+++ b/index.html
@@ -41,20 +41,18 @@
     .legend-overlay{ position:fixed; inset:0; display:none; z-index:1001; }
     .legend-overlay.show{ display:block; }
     .legend-overlay .backdrop{ position:absolute; inset:0; background:rgba(0,0,0,.35); }
+    /* ← 位置を「カテゴリ」ボタンのすぐ上へ */
     .legend-overlay .panel{
       position:absolute;
-      right:12px;            /* 画面右端から12px（カテゴリボタンと揃える） */
-      bottom:60px;           /* ボタンの少し上に配置（ボタンが bottom:12px なので +48px くらい余裕） */
-      transform:none;        /* センター配置を無効化 */
-    
+      right:12px;
+      bottom:60px;         /* ボタンのすぐ上 */
+      transform:none;
       background:#fff; border:1px solid #e5e7eb; border-radius:12px; box-shadow:var(--shadow);
-      padding:12px 14px;
-      width:min(92vw, 240px);
-      max-height:60vh;       /* スマホでもはみ出しにくいように */
-      overflow:auto;         /* はみ出したらスクロール */
+      padding:12px 14px; width:min(92vw, 360px); max-height:60vh; overflow:auto;
     }
     .legend-overlay h3{ margin:0 0 8px; font-size:15px; }
-    .legend-overlay .item{ display:flex; align-items:center; gap:8px; margin:6px 0; font-size:14px; }
+    .legend-overlay .item{ display:flex; align-items:center; gap:8px; margin:6px 0; font-size:14px; cursor:pointer; user-select:none; }
+    .legend-overlay .item:hover{ background:#f5f7ff; border-radius:8px; }
     .dot{ width:14px; height:22px; background:#ccc; border-radius:3px; position:relative; }
     .dot:after{ content:""; position:absolute; bottom:-6px; left:50%; transform:translateX(-50%);
       width:0; height:0; border-left:6px solid transparent; border-right:6px solid transparent; border-top:8px solid #ccc; }
@@ -102,15 +100,16 @@
     <div class="backdrop" id="legendBackdrop"></div>
     <div class="panel" role="dialog" aria-modal="true" aria-labelledby="legendTitle">
       <h3 id="legendTitle">カテゴリ</h3>
-      <div class="item"><span class="dot blue" aria-hidden="true"></span>お店（青）</div>
-      <div class="item"><span class="dot green" aria-hidden="true"></span>公共施設（緑）</div>
-      <div class="item"><span class="dot red" aria-hidden="true"></span>個人宅・塾（赤）</div>
+      <div class="item" id="legendAll"     data-filter="all"><span class="dot"       aria-hidden="true"></span>すべて表示</div>
+      <div class="item" id="legendShop"    data-filter="shop"><span class="dot blue"  aria-hidden="true"></span>お店（青）</div>
+      <div class="item" id="legendPublic"  data-filter="public"><span class="dot green" aria-hidden="true"></span>公共施設（緑）</div>
+      <div class="item" id="legendHome"    data-filter="home"><span class="dot red"   aria-hidden="true"></span>個人宅・塾（赤）</div>
     </div>
   </div>
 
   <!-- 歯車（管理者） -->
   <button id="gearBtn" class="gear-btn" aria-label="管理者設定">
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 15.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Z"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1Z"/></svg>
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 15.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Z"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06A2 2 0 1 1 7.04 3.4l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 1 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06A2 2 0 1 1 20.6 7.04l-.06.06a1.65 1.65 0 0 0-.33 1.82V9c0 .66.39 1.26 1 1.51.2.09.41.14.64.14H22a2 2 0 1 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1Z"/></svg>
   </button>
 
   <!-- 管理者モーダル（Apps Script） -->
@@ -164,7 +163,7 @@
     const categoryToColor = (c)=>({shop:'blue',public:'green',home:'red'}[c]||'blue');
 
     /************ 状態 ************/
-    const state = { isAdmin:false, markers:new Map(), pins:[], adminKey:null };
+    const state = { isAdmin:false, markers:new Map(), pins:[], adminKey:null, activeFilter:null };
     let lastClickedMarker = null; // 閲覧モードでクリック表示中のマーカーを追跡
     const els = {
       statusBadge: document.getElementById('status-badge'),
@@ -187,6 +186,10 @@
       legendBtn: document.getElementById('legendBtn'),
       legendOverlay: document.getElementById('legendOverlay'),
       legendBackdrop: document.getElementById('legendBackdrop'),
+      legendAll: document.getElementById('legendAll'),
+      legendShop: document.getElementById('legendShop'),
+      legendPublic: document.getElementById('legendPublic'),
+      legendHome: document.getElementById('legendHome'),
     };
 
     function uid(){ return 'm' + Math.random().toString(36).slice(2,8) + Date.now().toString(36); }
@@ -245,12 +248,26 @@
     };
     L.control.layers(baseLayers, null, { position:'topright', collapsed:true }).addTo(map);
 
+    /************ フィルタ（カテゴリ） ************/
+    function getVisiblePins(){
+      if (!state.activeFilter || state.activeFilter === 'all') return state.pins;
+      return state.pins.filter(p => p.category === state.activeFilter);
+    }
+    function setFilter(filter){
+      state.activeFilter = (filter === 'all') ? null : filter; // null=全件
+      renderAllPins();
+    }
+
     /************ マーカー描画 ************/
-    function clearAllMarkers(){ for (const m of state.markers.values()) m.remove(); state.markers.clear(); }
+    function clearAllMarkers(){
+      for (const m of state.markers.values()) m.remove();
+      state.markers.clear();
+      if (lastClickedMarker) lastClickedMarker = null;
+    }
 
     function renderAllPins(){
       clearAllMarkers();
-      state.pins.forEach(pin=>{
+      getVisiblePins().forEach(pin=>{
         const marker = L.marker([pin.lat, pin.lng], { icon: icons[pin.color]||icons.blue, riseOnHover:true, draggable: state.isAdmin });
 
         marker.on('dragend', async (ev)=>{
@@ -259,7 +276,7 @@
           else { const p=state.pins.find(x=>x.id===pin.id); if(p){ p.lat=Number(ll.lat); p.lng=Number(ll.lng); savePinsLocal(); renderAllPins(); } }
         });
 
-        // ツールチップ：ホバー用（カーソルの位置＝offset[0,0], sticky:true）とクリック用（ピン頭上＝offset[0,-36]）を用意
+        // ツールチップ：ホバー用（カーソル位置＝offset[0,0], sticky:true）とクリック用（ピン頭上＝offset[0,-36]）
         const nameText = pin.name || '名称未設定';
         const hoverTT = L.tooltip({direction:'top', sticky:true, offset:[0,0], className:'my-tooltip'}).setContent(nameText);
         const clickTT = L.tooltip({direction:'top', sticky:false, offset:[0,-36], className:'my-tooltip'}).setContent(nameText);
@@ -269,17 +286,16 @@
         // 既定はホバー用をバインド
         marker.bindTooltip(hoverTT);
 
-        // ホバー時：ホバー用に差し戻し＆開く（スマホでは発火しない）
+        // ホバー時（PC）
         marker.on('mouseover', ()=>{
           if (marker.getTooltip() !== hoverTT) { marker.unbindTooltip(); marker.bindTooltip(hoverTT); }
           marker.openTooltip();
         });
         marker.on('mouseout', ()=>{ marker.closeTooltip(); });
 
-        // クリック時：閲覧モードはクリック用を開き、他所クリックで閉じる／管理者モードは編集ポップアップ
+        // クリック時：閲覧モードはクリック用名のみ／管理者モードは編集
         marker.on('click', ()=>{
           if (!state.isAdmin) {
-            // すでに他のマーカーがクリック表示中なら閉じる
             if (lastClickedMarker && lastClickedMarker !== marker) {
               lastClickedMarker.closeTooltip();
               if (lastClickedMarker._hoverTT) {
@@ -288,13 +304,11 @@
               }
               lastClickedMarker = null;
             }
-            // クリック用に差し替えて開く
             marker.closeTooltip();
             marker.unbindTooltip();
             marker.bindTooltip(clickTT).openTooltip();
             lastClickedMarker = marker;
 
-            // 地図上の他所を1回クリックしたら閉じてホバーに戻す
             setTimeout(()=>{
               const closeOnce = ()=>{
                 if (lastClickedMarker) {
@@ -348,7 +362,7 @@
           container.querySelector('#applyCatBtn').addEventListener('click', async ()=>{
             const sel = container.querySelector('#catSel').value;
             if (USE_APPS_SCRIPT) { await updatePinRemote(pin.id, { category: sel, color:categoryToColor(sel) }); await refreshRemotePins(); }
-            else { changeCategoryLocal(pin.id); }
+            else { changeCategoryLocal(pin.id, sel); }
             marker.closePopup();
           });
         });
@@ -358,7 +372,12 @@
       });
     }
 
-    function fitToPins(){ if(!state.pins.length) return; const b=L.latLngBounds(state.pins.map(p=>[p.lat,p.lng])); map.fitBounds(b.pad(0.2)); }
+    function fitToPins(){
+      if(!state.pins.length) return;
+      const pins = getVisiblePins(); // フィルタ中は表示中ピンでフィット
+      if (!pins.length) return;
+      const b=L.latLngBounds(pins.map(p=>[p.lat,p.lng])); map.fitBounds(b.pad(0.2));
+    }
 
     // 地図クリック→追加（管理者のみ）
     map.on('click', (e)=>{
@@ -435,16 +454,20 @@
     const deletePinRemote = (id)=> postAS({ op:'delete', id });
 
     /************ ボタン ************/
+    // 現在地へ：ズームは変更しない（既存のズームを維持）
     els.locateBtn.addEventListener('click', ()=>{
       if (!navigator.geolocation) return alert('このブラウザは現在地取得に対応していません。');
       navigator.geolocation.getCurrentPosition(
-        (pos)=>{ map.setView([pos.coords.latitude, pos.coords.longitude], 16);
-                 const c=L.circle([pos.coords.latitude, pos.coords.longitude], { radius:20, color:'#0a7cff' }).addTo(map);
-                 setTimeout(()=>c.remove(),3000); },
+        (pos)=>{
+          map.setView([pos.coords.latitude, pos.coords.longitude], map.getZoom());
+          const c=L.circle([pos.coords.latitude, pos.coords.longitude], { radius:20, color:'#0a7cff' }).addTo(map);
+          setTimeout(()=>c.remove(),3000);
+        },
         (err)=> alert('現在地を取得できませんでした: ' + err.message),
         { enableHighAccuracy:true, timeout:8000 }
       );
     });
+
     els.fitBtn.addEventListener('click', ()=>{ if (state.pins.length) fitToPins(); else map.setView(DEFAULT_CENTER, DEFAULT_ZOOM); });
 
     els.exportBtn.addEventListener('click', ()=>{
@@ -482,9 +505,9 @@
           '・閲覧モード：ホバーで名前（カーソル位置）、クリックで名前（ピン頭上・他所クリックで閉）',
           '・管理者モード：地図クリックで追加／ピンのポップアップから名称・カテゴリ変更／削除可',
           '・管理者モード中はピンをドラッグで微調整できます',
-          '・エクスポート／インポートでJSONを保存・読み込み可能（形式互換）',
-          '・ログイン：左下の歯車 → 管理者キー',
-          '・管理者キー変更：左下の歯車 → フォームで変更（要ログイン）'
+          '・カテゴリ：カテゴリ→「すべて表示／お店／公共施設／個人宅・塾」をクリックで表示を切替',
+          '・エクスポート／インポート（JSON）対応',
+          '・ログイン：左下の歯車 → 管理者キー（変更も可）'
         ].join('\n'));
       });
     }
@@ -532,31 +555,28 @@
       }
     });
 
-    /************ カテゴリ（凡例）ウインドウの開閉 ************/
+    /************ カテゴリパネル（開閉＆フィルタ） ************/
     function openLegend(){
       els.legendOverlay.classList.add('show');
-      els.legendOverlay.setAttribute('aria-hidden', 'false');
+      els.legendOverlay.setAttribute('aria-hidden','false');
     }
     function closeLegend(){
       els.legendOverlay.classList.remove('show');
-      els.legendOverlay.setAttribute('aria-hidden', 'true');
+      els.legendOverlay.setAttribute('aria-hidden','true');
     }
-    // ボタンで開閉（トグル）
-    els.legendBtn.addEventListener('click', ()=>{
-      const isOpen = els.legendOverlay.classList.contains('show');
-      isOpen ? closeLegend() : openLegend();
-    });
-    // 背景タップで閉じる
+    els.legendBtn.addEventListener('click', openLegend);
     els.legendBackdrop.addEventListener('click', closeLegend);
-    // オーバーレイ領域のクリックで、パネル以外をクリックしたら閉じる
-    els.legendOverlay.addEventListener('click', (e)=>{
-      // 直接 overlay をクリックしたときのみ閉じる（子要素のパネルクリックは無視）
-      if (e.target === els.legendOverlay) closeLegend();
-    });
-    // Escape キーで閉じる
-    window.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') closeLegend(); });
-    // 地図クリックでも閉じる
-    map.on('click', closeLegend);
+    window.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeLegend(); });
+
+    // クリックでフィルタ → パネルを閉じる
+    function handleLegendClick(filter){
+      setFilter(filter);
+      closeLegend();
+    }
+    els.legendAll.addEventListener('click',   ()=> handleLegendClick('all'));
+    els.legendShop.addEventListener('click',  ()=> handleLegendClick('shop'));
+    els.legendPublic.addEventListener('click',()=> handleLegendClick('public'));
+    els.legendHome.addEventListener('click',  ()=> handleLegendClick('home'));
 
     /************ 初期化 ************/
     (async function init(){
@@ -572,5 +592,3 @@
   </script>
 </body>
 </html>
-
-
